2016-05-02  Daniel Hawkins
	* doc/spell-docs/tome-of-magic.txt: Made some manual edits to effects of
	  spells. Still far from complete.

2016-01-11  Daniel Hawkins
	* doc/scripts/bonus_extract.pl: Refactor shop bonus to match actual implementation.

2015-12-25  Daniel Hawkins
	* configure.ac: Add check for librt and link it in if found.

2015-12-18  Daniel Hawkins
	* doc/spell-docs/spell-summary.ps: Removed. Replaced by a text file for
	  easier maintenance in the future.
	* doc/spell-docs/spell-summary.txt: New text file with the information
	  formerly stored in spell-summary.ps.
	* doc/spell-docs/create_ps.sh: Add a new command to generate spell-summary.ps.
	* configure.ac: Removed check for memcmp(), srand(), and size_t.
	  Thes should all be definied correctly in a C99 compiler, which we require.
	* include/win32.h: Removed reference to HAVE_SRAND macro from autoconfig.h.
	* include/define.h: Cleaned up RANDOM and SRANDOM macro definitions.
	  Since we require C99, there should not be a situation where not even srand is found.

2015-12-15  Daniel Hawkins
	* doc/spell-docs/create_ps.sh: Abstracted the PostScript generation
	  out of the perl script. Also add spell-info.ps to the generated
	  documents.
	* doc/spell-docs/Makefile.am: Adjusted make definitions to
	  accomodate for new script.
	* doc/spell-docs/spell-info.ps: Removed. Generated from spell-info.txt.
	* doc/spell-docs/spell-lists.pl: Removed PostScript output.
	* doc/spell-docs/tome-of-magic.ps: Removed. Generated from
	  tome-of-magic.txt.

2015-12-13  Daniel Hawkins
	* server/skill_util.c: Fix phantom miss messages that should occur only with [Fire]+attack.

2015-12-12	Daniel Hawkins
	* doc/Makefile.am: Add build target for making documentation archive
	  with new dynamically generated spell lists.
	* doc/spell-docs/Makefile.am: Add build target for dynamic generation of spell lists.
	  Also, clean up the EXTRA_DIST declaration.