@@ -1,9 +1,10 @@
-EXTRA_DIST = README spell-summary.ps
+EXTRA_DIST = README
 
 PERL=@PERL@
 CROSSBIN=../../server/crossfire-server
 
-CLEANFILES=spell-list.txt spell-list.ps prayer-list.txt prayer-list.ps
+CLEANFILES=spell-list.txt spell-list.ps prayer-list.txt prayer-list.ps tome-of-magic.ps \
+	    spell-summary.ps spell-info.ps
 
 spell-docs: spell-info.txt tome-of-magic.txt prayer-list.txt spell-list.txt
 	$(SHELL) create_ps.sh
